--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,1 +1,12 @@
+name: smart_task_manager
+description: A simple task manager app with SQLite
+publish_to: 'none'
+environment:
+  sdk: ">=2.17.0 <3.0.0"
+
+dependencies:
+  flutter:
+    sdk: flutter
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.9
 
